--- a/views/index.html
+++ b/views/index.html
@@ -35,7 +35,7 @@
 	<div class="list">
 															
 	</div>
-	<div class="end"></div>
+	<div class="end">别滑人家了~到底了(´･_･`)</div>
 	<div class="follow">
 		<p>关注尚免公众号，获取更多免费！</p>
 	</div>
