--- a/public/stylesheets/console.css
+++ b/public/stylesheets/console.css
@@ -63,6 +63,7 @@ img {
     margin-top: 15px;
 }
 .menu .title{
+    position: relative;
     width: 100%;
     height:40px;
     font-family:"Microsoft YaHei",微软雅黑;
@@ -73,6 +74,7 @@ img {
     background-color: #22282e;
 }
 .menu .list{
+    position: relative;
     width: 100%;
     height:40px;
     font-family:"Microsoft YaHei",微软雅黑;
@@ -83,6 +85,32 @@ img {
 }
 .menu .list:hover{ 
     background-color:#22282e;
+}
+.menu .title span{
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    height: 30px;
+    width: auto;
+    min-width: 30px;
+    color: #FFB00C;
+    font-size: 14px;
+    border-radius: 30px;
+    line-height: 30px;
+    background-color: #C81622;
+}
+.menu .list span{
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    height: 30px;
+    width: auto;
+    min-width: 30px;
+    color: #FFB00C;
+    font-size: 14px;
+    border-radius: 30px;
+    line-height: 30px;
+    background-color: #C81622;
 }
 .menu .on{ 
     background-color:#22282e;
