数量结构添加

--- a/views/console.html
+++ b/views/console.html
@@ -22,11 +22,11 @@
 	</div>
 </div>
 <div class="menu">
-	<div class="title">数据管理</div>
-	<div class="list" data-type="free">0元抢</div>
-	<div class="list" data-type="little">几乎免费</div>
-	<div class="list" data-type="coupon">优惠券</div>
-	<div class="list" data-type="cheep">白菜价</div>
+	<div class="title">数据管理<span></span></div>
+	<div class="list" data-type="free">0元抢<span></span></div>
+	<div class="list" data-type="little">几乎免费<span></span></div>
+	<div class="list" data-type="coupon">优惠券<span></span></div>
+	<div class="list" data-type="cheep">白菜价<span></span></div>
 	<div class="title">统计数据</div>
 	<div class="list" data-type="tongji">查看数据</div>
 </div>
